# ckanext-chatbot

./: setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/chatbot/: views.py
ckanext/chatbot/data/: test_fine_tuning.jsonl
ckanext/chatbot/templates/chatbot/: talk.html
